// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert has the correct class name when given success prop equal to false 1`] = `
<DocumentFragment>
  <div
    class="
      Alert 
      error
      "
    title="alert"
  >
    Error!
  </div>
</DocumentFragment>
`;

exports[`Alert has the correct class name when given success prop equal to true 1`] = `
<DocumentFragment>
  <div
    class="
      Alert 
      success
      "
    title="alert"
  >
    Success!
  </div>
</DocumentFragment>
`;

exports[`Alert renders nothing if no message is provided 1`] = `<DocumentFragment />`;

exports[`Alert renders the provided message 1`] = `
<DocumentFragment>
  <div
    class="
      Alert 
      success
      "
    title="alert"
  >
    Success!
  </div>
</DocumentFragment>
`;
